--- a/index.html
+++ b/index.html
@@ -3,11 +3,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <title>BuzzQuiz</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="buzzquiz.css">
 </head>
 <body>
+    <header>BuzzQuiz</header>
+    <main>
+        <section class="criar-quiz">
+            <span>Você não criou nenhum quizz ainda :(</span>
+            <button>Criar Quizz</button>
+        </section>
+        <section class="seu-quizzes">
+            <span>Seus Quizzes</span>
+            <div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+            </div>
+        </section>
+        <section class="outros-quizzes">
+            <span>Todos os Quizzes</span>
+            <div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="buzzquiz.js"></script>
 </body>
