--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 <div class="cards">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
                 </div>
+                <div class="cards">
+                    <span>Quizz sobre algo muitissimo interessante imperdivel</span>
+                </div>
             </div>
         </section>
         <section class="outros-quizzes">
