--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
             <div class="container-cards">
                 <div class="cards">
+                    <img src="img/1295304.jpg" alt="">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
                 </div>
                 <div class="cards">
