const novoQuizz preenchida ao finalizar criação

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
         </div>
     </div> <!--fim da classe container com a tela 2-->
-    <div class="info escondido"> <!-- início tela 3.1 informações básicas do quizz -->
+    <div class="criação-info escondido"> <!-- início tela 3.1 informações básicas do quizz -->
         <div>
             Comece pelo começo
         </div>
