Correção da cagada que eu fiz na minha parte do codigo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
             <div class="container-cards">
                 <div class="cards">
+                    <img src="img/1295304.jpg" alt="">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
                 </div>
                 <div class="cards">
@@ -82,7 +83,7 @@
             </div>
         </section>
     </main>
-    <div class="container escondido"> <!--tela 2 - tela de um quiz-->
+    <div id="tela2" class="container escondido"> <!--tela 2 - tela de um quiz-->
         <header>
             <h1 class="titulo-buzzquiz"> BuzzQuizz</h1>
         </header>
