Selecionar Quiz e variavel com as respostas

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 </head>
 
 <body>
-    <header>BuzzQuiz</header>
+    <header>BuzzQuizz</header>
     <main>
         <section class="criar-quiz">
             <span>Você não criou nenhum quizz ainda :(</span>
             <button onclick="abrirCriarQuizzInfo()">Criar Quizz</button>
         </section>
-        <section class="seu-quizzes">
+        <section class="seu-quizzes escondido">
             <div>
                 <span>Seus Quizzes</span>
                 <ion-icon onclick="abrirCriarQuizzInfo()" name="add-circle"></ion-icon>
             </div>
-            <div class="container-cards">
+            <div class="container-cards escondido">
                 <div class="cards">
                     <img src="img/1295304.jpg" alt="">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
