--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div>
                 <span>Todos os Quizzes</span>
             </div>
-            <div class="container-cards">
+            <div class="container-cards escondido">
                 <div class="cards">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
                 </div>
