HTML fix certo '-'

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 </div>
             </div>
         </section>
-        <section class="outros-quizzes">
+        <section class="outros-quizzes escondido">
             <div>
                 <span>Todos os Quizzes</span>
             </div>
-            <div class="container-cards escondido">
+            <div class="container-cards">
                 <div class="cards">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
                 </div>
