--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span>Seus Quizzes</span>
                 <ion-icon onclick="abrirCriarQuizzInfo()" name="add-circle"></ion-icon>
             </div>
-            <div class="container-cards escondido">
+            <div class="container-cards">
                 <div class="cards">
                     <img src="img/1295304.jpg" alt="">
                     <span>Quizz sobre algo muitissimo interessante imperdivel</span>
@@ -168,7 +168,7 @@
         </div>
     </div> <!--fim da classe container com a tela 2-->
     <div class="criação-info escondido"> <!-- início tela 3.1 informações básicas do quizz -->
-        <div>
+        <div onclick="tempTest(this)">
             Comece pelo começo
         </div>
         <div>
