--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span>Você não criou nenhum quizz ainda :(</span>
             <button onclick="abrirCriarQuizzInfo()">Criar Quizz</button>
         </section>
-        <section class="seu-quizzes">
+        <section class="seu-quizzes escondido">
             <div>
                 <span>Seus Quizzes</span>
                 <ion-icon onclick="abrirCriarQuizzInfo()" name="add-circle"></ion-icon>
