Projetão Buzzquizz com todos os requisitos obrigatórios finalizados

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
                 </div>
             </div>
 
-            <div class="resultado">
+            <div class="resultado escondido">
                 <div class="caixa-de-resultado">
-                    <p class="minha-pergunta">88% de acerto: Você é praticamente um aluno de Hogwarts!</p>
+                    <p class="meu-score">88% de acerto: Você é praticamente um aluno de Hogwarts!</p>
                 </div>
                 <div class="meu-resultado">
                     <img src="https://static1.patasdacasa.com.br/articles/9/37/49/@/15168-o-gato-munchkin-e-docil-afetuoso-e-expl-articles_media_mobile-2.jpg"
