Alert editar e tweaks no css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header onclick="voltaParaHome()">BuzzQuizz</header>
+    <header><span onclick="voltaParaHome()">BuzzQuizz</span></header>
     <main>
         <section class="criar-quiz">
             <span>Você não criou nenhum quizz ainda :(</span>
